@@ -1,3 +1,10 @@
+Thu Sep 11 10:09:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* sanity.sh (newb-123j0): Use two regexps instead of assuming that
+	expr has "\(", "\|", and "\)".  If we want to require the latter,
+	we should check for it up front, rather than let people get
+	halfway through and wonder why the test failed.
+
 Tue Sep  9 19:22:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* expand_path.c (expand_path): If GETPWNAM_MISSING is defined,
